change in argos4j verify to 2.0 and release